[package]
name = "osl-crypto-watcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[workspace]

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
tempfile = "3.24"
